tests/snapshots/cli_parse__parse_env_vars_commands_update_or_create_minimal.snap
---
source: tests/cli_parse.rs
expression: "&opt"
---
{
  "command": {
    "EnvVars": {
      "command": {
        "UpdateOrCreate": {
          "secret_id": "11111111-1111-1111-1111-111111111111",
          "env_var_name": "MY_VAR",
          "env_var_value": "new_value",
          "password_creation_settings": {
            "password_length": 21,
            "danger_password_allowed_chars": null
          }
        }
      }
    }
  },
  "raw_config": {
    "psono_settings": {
      "api_key_id": "00000000-0000-0000-0000-000000000000",
      "api_secret_key_hex": "0000000000000000000000000000000000000000000000000000000000000000",
      "server_url": "https://psono.pw/server"
    },
    "http_options": {
      "timeout": 60,
      "max_redirects": 0,
      "use_native_tls": false,
      "danger_disable_tls_verification": false,
      "der_root_certificate_path": null,
      "pem_root_certificate_path": null
    },
    "config_packed": null,
    "config_path": null
  }
}
