tests/snapshots/cli_parse__parse_fails_conflicting_arguments.snap
---
source: tests/cli_parse.rs
expression: error
---
error: the argument '--overwrite' cannot be used multiple times

Usage: psonoci config save [OPTIONS] <PATH>

For more information, try '--help'.
