tests/snapshots/cli_parse__parse_fails_invalid_subcommand.snap
---
source: tests/cli_parse.rs
expression: error
---
error: unrecognized subcommand 'invalid-command'

Usage: psonoci [OPTIONS] <COMMAND>

For more information, try '--help'.
