tests/snapshots/cli_parse__parse_fails_missing_server_url.snap
---
source: tests/cli_parse.rs
expression: error
---
error: the following required arguments were not provided:
  --server-url <SERVER_URL>

Usage: psonoci --api-key-id <API_KEY_ID> --api-secret-key-hex <API_SECRET_KEY_HEX> --server-url <SERVER_URL> <COMMAND>

For more information, try '--help'.
