tests/snapshots/cli_parse__parse_fails_onboard_conflicting_output_targets.snap
---
source: tests/cli_parse.rs
assertion_line: 991
expression: error.to_string()
---
error: the argument '--stdout' cannot be used with '--path <PATH>'

Usage: psonoci onboard <--path <PATH>|--stdout>

For more information, try '--help'.
